[package]
name = "kernelspace"
publish = true
version = "0.1.1"
edition = "2024"
authors = ["José Gois <ze.gois.00@gmail.com>"]
description = "Standard library for kernelspace"
documentation = "https://docs.rs/bitflags"
repository = "https://github.com/ze-gois/rust_kernelspace"
readme = "README.md"
homepage = "https://userspace.builders"
license-file = "LICENSE"
keywords = ["architecture", "operating_system"]
categories = ["no-std", "os"]

[lib]
name = "kernelspace"
path = "src/library.rs"
test = false

[[bin]]
name = "kernelspace"
path = "src/entry.rs"
test = false

[dependencies]
ample = { path = "../ample" }
userspace = { path = "../userspace" }

[build-dependencies]
cc = "1.0"
userspace = { path = "../userspace" }
